deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-web
  namespace: todo-web
  labels:
    app: todo-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: todo-web
    spec:
      containers:
      - name: todo-web
        image: acrdigitalgarage01.azurecr.io/todo-web:cicd-46-20250508-0918
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
      imagePullSecrets:
      - name: acr-auth
