service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-web
  namespace: todo-web
  labels:
    app: todo-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: todo-web
