ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-web-ingress
  namespace: todo-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "todoweb.20.214.196.128.nip.io"  # INGRESS_IP는 실제 Ingress Controller IP로 대체해야 함
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: todo-web
            port:
              number: 80
